Updated ignore file

--- a/.bzrignore
+++ b/.bzrignore
@@ -1,12 +1,9 @@
-thesis.out
-abstract.aux
-acknowledgements.aux
-mainintro.aux
-shortintro.aux
-theend.aux
-thesis.aux
-thesis.bbl
-thesis.blg
-thesis.log
-thesis.lot
-thesis.toc
+*.out
+*.aux
+*.log
+*.toc
+*.lot
+*.bbl
+*.blg
+*.lof
+
